# aeval

./: .clang-format  .gitignore  CMakeLists.txt  CODING_STANDARD.md
bench_adt/: list_append2_rev.smt2  list_append_alt.smt2  list_append_alt2.smt2  list_bin_len.smt2  list_len.smt2  list_len2.smt2  list_len_alt.smt2  list_rev2_append.smt2  list_rev2_len.smt2  list_rev_snoc_cons.smt2  queue_amort.smt2  rb_tree.smt2  tree_mirror.smt2
bench_adt/bench_disproof/: fac.smt2  list_rev.smt2  mixed1.smt2  nat_list1.smt2  nat_list3.smt2  nat_list4.smt2  nat_list_right.smt2  nats.smt2  nested_tuple1.smt2  nested_tuple2.smt2  no_nat_double1.smt2  no_nat_double2.smt2  small_assert.smt2  ternary.smt2  tree.smt2  tree_list1.smt2  tree_list2.smt2  tree_mirror.smt2  tree_size.smt2  tree_tuple.smt2  triple_list1.smt2  triple_list2.smt2  tuple1.smt2
bench_adt/exists/: increase.smt
bench_horn_adt/ADTIND-new/: heap_size.smt2  list_append_ass.smt2  list_append_len.smt2  list_append_min.smt2  list_append_min2.smt2  list_append_nil.smt2  list_append_sum.smt2  list_interleave.smt2  list_len.smt2  list_len_butlast.smt2  list_len_stren.smt2  list_min_max.smt2  list_min_sum.smt2  list_min_sum_len.smt2  list_rev.smt2  list_rev2_append.smt2  list_rev2_len.smt2  queue_amort.smt2  queue_len.smt2  queue_popback.smt2  queue_push.smt2  queue_push_to_list.smt2  tree_insert_all_size.smt2  tree_insert_size.smt2  tree_insert_sum.smt2  (+1 more)
include/: CMakeLists.txt
scripts/: runTests.py
src/: CMakeLists.txt  common.h
tools/sygus/: CMakeLists.txt  checkresult.sh  sygussolver.cpp  testparser.cpp
(+101 files in other folders)
